{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 14,
  "lineage": "a15ac1df-f67c-43f7-1d87-8b44bb844a5d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04cfdc23a13cc1c06",
            "association_id": "eipassoc-08bddc6a59ae23789",
            "domain": "vpc",
            "id": "eipalloc-04cfdc23a13cc1c06",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c299eaed031d0002",
            "private_dns": "ip-192-168-3-164.ap-southeast-1.compute.internal",
            "private_ip": "192.168.3.164",
            "public_dns": "ec2-13-215-8-248.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.8.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:952193339612:internet-gateway/igw-03d3d59c85798504b",
            "id": "igw-03d3d59c85798504b",
            "owner_id": "952193339612",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-069459d9ff094c7df"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04cfdc23a13cc1c06",
            "connectivity_type": "public",
            "id": "nat-09db57f60e7766254",
            "network_interface_id": "eni-0c299eaed031d0002",
            "private_ip": "192.168.3.164",
            "public_ip": "13.215.8.248",
            "subnet_id": "subnet-07b56077e9e0d5dc6",
            "tags": {
              "Name": "NGW"
            },
            "tags_all": {
              "Name": "NGW"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:952193339612:route-table/rtb-0170e19bc690071b6",
            "id": "rtb-0170e19bc690071b6",
            "owner_id": "952193339612",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d3d59c85798504b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom"
            },
            "tags_all": {
              "Name": "custom"
            },
            "timeouts": null,
            "vpc_id": "vpc-069459d9ff094c7df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:952193339612:route-table/rtb-0bed9fb84a7d0b3aa",
            "id": "rtb-0bed9fb84a7d0b3aa",
            "owner_id": "952193339612",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09db57f60e7766254",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "timeouts": null,
            "vpc_id": "vpc-069459d9ff094c7df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.NGW",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccd362873f44004b",
            "route_table_id": "rtb-0170e19bc690071b6",
            "subnet_id": "subnet-0e720bccacc75ed2c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.rt1",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcc53e081d475195",
            "route_table_id": "rtb-0bed9fb84a7d0b3aa",
            "subnet_id": "subnet-07b56077e9e0d5dc6"
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.NGW",
            "aws_route_table.rt2",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:952193339612:security-group/sg-0ae337eca43cca085",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae337eca43cca085",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "first-sg",
            "name_prefix": "",
            "owner_id": "952193339612",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "first-sg"
            },
            "tags_all": {
              "Name": "first-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-069459d9ff094c7df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:952193339612:subnet/subnet-07b56077e9e0d5dc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b56077e9e0d5dc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "952193339612",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet"
            },
            "tags_all": {
              "Name": "private subnet"
            },
            "vpc_id": "vpc-069459d9ff094c7df"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:952193339612:subnet/subnet-0e720bccacc75ed2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e720bccacc75ed2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "952193339612",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet"
            },
            "tags_all": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-069459d9ff094c7df"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:952193339612:vpc/vpc-069459d9ff094c7df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-024e4a4111f4314d5",
            "default_route_table_id": "rtb-0c25b024bc62edd0a",
            "default_security_group_id": "sg-03e28d172dac2b374",
            "dhcp_options_id": "dopt-0ce14755626f64c5c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-069459d9ff094c7df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c25b024bc62edd0a",
            "owner_id": "952193339612",
            "tags": {
              "Name": "new_vpc"
            },
            "tags_all": {
              "Name": "new_vpc"
            }
          }
        }
      ]
    }
  ]
}